Fixed email in changelog. Adapting mk distrib for SF.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ izumi (0.9.4-0) unstable; urgency=low
 
   * New minor features: blog previous links, izu:ip-deny.
 
- -- Raphael Moll <ralf@alfray.com>  Sun, 19 Dec 2004 23:07:27 -0800
+ -- Raphael Moll <webralf@alfray.com>  Sun, 19 Dec 2004 23:07:27 -0800
 
 izumi (0.9.3-2) unstable; urgency=low
 
