--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+izumi (1.1-0) stable; urgency=low
+
+  * Vim syntax highlight files
+  * Changed way permalinks are generated (now actually working)
+  * Intra/inter blog references now possible
+
+ -- Raphael Moll <ralf@alfray.com>  Mon, 25 Apr 2005 17:40:32 -0700
+
 izumi (1.0-0) stable; urgency=low
 
   * Version 0.9.4 deemded stable.
